header spacing fix

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -92,13 +92,16 @@ li a {
 
 #headline_div {
 	font-size: 70px;
-	padding: 20px 20px;
+	padding: 1px 20px;
 	margin-right: 20px;
-	margin-bottom: 100px;
+	margin-bottom: 150px;
 	width: 40%;
 	text-align: center;
 	display: inline-block;
 	position: relative;
+	top: -44px;
+   	left: 20px;
+   	bottom: 50px;
 
 }
 
@@ -106,11 +109,11 @@ li a {
 	height: auto;
 	width: 30%;
 	display: inline-block;
-	margin-top: 100px;
+	margin-top: -28px;
 	margin-bottom: 50px;
 	position: relative;
-	top: 60px;
-   	left: 60px;
+	top: 79px;
+   	left: 20px;
 }
 
 
